# modisci

./: README.md  pyproject.toml
modisci/: __init__.py  h03v06.jpeg.aux.xml  h03v06.tif  h03v07.jpeg.aux.xml  h03v07.tif  h06v03.jpeg.aux.xml  h06v03.tif  h07v03.jpeg.aux.xml  h07v03.tif  h07v05.jpeg.aux.xml  h07v05.tif  h07v06.jpeg.aux.xml  h07v06.tif  h08v03.jpeg.aux.xml  h08v03.tif  h08v04.jpeg.aux.xml  h08v04.tif  h08v05.jpeg.aux.xml  h08v05.tif  h08v06.jpeg.aux.xml  h08v06.tif  h08v07.jpeg.aux.xml  h08v07.tif  h08v08.jpeg.aux.xml  h08v08.tif  h08v09.jpeg.aux.xml  h08v09.tif  h09v02.jpeg.aux.xml  h09v02.tif  h09v03.jpeg.aux.xml  h09v03.tif  h09v04.jpeg.aux.xml  h09v04.tif  h09v05.jpeg.aux.xml  h09v05.tif  h09v06.jpeg.aux.xml  h09v06.tif  h09v07.jpeg.aux.xml  h09v07.tif  h09v08.jpeg.aux.xml  (+424 more)
